# super-eureka

./: README.md  advent2021.cabal
app/: Day1.lhs  Day1.md  Day10.lhs  Day10.md  Day11.lhs  Day11.md  Day12.lhs  Day12.md  Day13.lhs  Day13.md  Day14.lhs  Day14.md  Day15.lhs  Day15.md  Day16.lhs  Day16.md  Day17.lhs  Day17.md  Day18.lhs  Day18.md  Day19.lhs  Day19.md  Day2.lhs  Day2.md  Day20.lhs  Day20.md  Day21.lhs  Day21.md  Day22.lhs  Day22.md  Day23.lhs  Day23.md  Day24.lhs  Day24.md  Day25.lhs  Day25.md  Day3.lhs  Day3.md  Day4.lhs  Day4.md  (+11 more)
