cabal-version:      2.4
name:               advent2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             John Chapman
maintainer:         thestar@fussycoder.id.au

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent2021
    main-is:          Main.lhs

    -- Modules included in this executable, other than Main.
    -- other-
    other-modules: Day1

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
                    , markdown-unlit
    ghc-options:    -pgmL markdown-unlit
    hs-source-dirs:   app
    default-language: Haskell2010
